--- a/scss/components/_base.scss
+++ b/scss/components/_base.scss
@@ -68,3 +68,73 @@ img {
 .active {
   display: block;
 }
+
+.request {
+  background: $accentColor;
+
+  &__wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: 426px) {
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  }
+
+  h5 {
+    font-weight: bold;
+    font-size: 48px;
+    letter-spacing: 0.02em;
+    margin-bottom: 7px;
+
+    @media (max-width: 769px) {
+      font-size: 36px;
+    }
+
+    @media (max-width: 426px) {
+      font-size: 26px;
+      flex-wrap: wrap;
+    }
+  }
+
+  p {
+    font-weight: bold;
+    font-size: 24px;
+    letter-spacing: 0.02em;
+
+    @media (max-width: 769px) {
+      font-size: 17px;
+    }
+    @media (max-width: 426px) {
+      font-size: 13px;
+    }
+  }
+
+  &__btn {
+    font-size: 14px;
+    color: #000000;
+    padding: 10px 22px;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: 600;
+
+    @media (max-width: 426px) {
+      margin-top: 15px;
+      font-size: 13px;
+      padding: 1px 2px;
+      display: flex;
+      align-items: center;
+      font-weight: 100;
+    }
+    &::before {
+      content: "";
+      background: url(../img/.png) no-repeat center;
+      padding: 18px;
+    }
+    &:active {
+      transform: scale(1.1, 1.1);
+    }
+  }
+}
