--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -1,3 +1,15 @@
 .footer {
-  margin-top: auto;
+  padding: 30px 0;
+  background: #404149;
+  &__box {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__rights,
+  &__dev {
+    font-family: "Open Sans";
+    font-size: 16px;
+    color: #ffffff;
+  }
 }
