--- a/scss/pages/front-page.scss
+++ b/scss/pages/front-page.scss
@@ -183,67 +183,7 @@
 }
 
 .clever-projects {
-  background: $accentColor;
   padding: 59px 0;
-
-  &__wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  h5 {
-    font-weight: bold;
-    font-size: 48px;
-    letter-spacing: 0.02em;
-    margin-bottom: 7px;
-
-    @media (max-width: 769px) {
-      font-size: 36px;
-    }
-
-    @media (max-width: 426px) {
-      font-size: 26px;
-    }
-  }
-
-  p {
-    font-weight: bold;
-    font-size: 24px;
-    letter-spacing: 0.02em;
-
-    @media (max-width: 769px) {
-      font-size: 17px;
-    }
-    @media (max-width: 426px) {
-      font-size: 13px;
-    }
-  }
-
-  &__btn {
-    font-size: 14px;
-    color: #000000;
-    padding: 10px 22px;
-    cursor: pointer;
-    transition: 0.3s;
-    font-weight: 600;
-
-    @media (max-width: 426px) {
-      font-size: 13px;
-      padding: 1px 2px;
-      display: flex;
-      align-items: center;
-      font-weight: 100;
-    }
-    &::before {
-      content: "";
-      background: url(../img/.png) no-repeat center;
-      padding: 18px;
-    }
-    &:active {
-      transform: scale(1.1, 1.1);
-    }
-  }
 }
 
 .works {
@@ -388,7 +328,7 @@
       padding: 79px 30px 37px;
       font-family: Open Sans;
       line-height: 21px;
-      font-size: 14px;
+      font-size: 16px;
       color: #999999;
 
       &::before {
@@ -407,6 +347,45 @@
       font-weight: 500;
       font-size: 21px;
       letter-spacing: 0.02em;
+      span {
+        color: $accentColor;
+      }
+    }
+  }
+}
+
+.work__with-us {
+  padding: 40px 0;
+}
+
+.contacts {
+  padding: 50px 0;
+
+  &__items {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 50px;
+  }
+
+  &__item {
+    text-align: center;
+
+    h3 {
+      font-weight: 500;
+      font-size: 24px;
+      color: #999999;
+      margin: 30px 0;
+    }
+
+    p {
+      max-width: 250px;
+      width: 100%;
+      font-weight: 500;
+      font-size: 24px;
+      text-align: center;
+      color: #000000;
+
       span {
         color: $accentColor;
       }
