--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -9,7 +9,11 @@
   &__rights,
   &__dev {
     font-family: "Open Sans";
-    font-size: 16px;
+    font-size: 18px;
     color: #ffffff;
+
+    @media (max-width: 426px) {
+      font-size: 16px;
+    }
   }
 }
